# higher-graphen

./: .gitignore  COMMERCIAL_BOUNDARY.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASE_NOTES.md
crates/higher-graphen-completion/: Cargo.toml
crates/higher-graphen-completion/src/: lib.rs  obstruction.rs  tests.rs
crates/higher-graphen-context/: Cargo.toml
crates/higher-graphen-context/src/: lib.rs  tests.rs
crates/higher-graphen-core/: Cargo.toml
crates/higher-graphen-core/src/: confidence.rs  error.rs  extension.rs  id.rs  lib.rs  provenance.rs  review.rs  source.rs  tests.rs  text.rs
crates/higher-graphen-core/src/extension/: common.rs  derivation.rs  identity.rs  scenario_policy.rs  validation.rs  valuation_schema.rs  witness.rs
crates/higher-graphen-interpretation/: Cargo.toml
crates/higher-graphen-interpretation/src/: architecture.rs  lib.rs  package.rs  tests.rs
crates/higher-graphen-invariant/: Cargo.toml
crates/higher-graphen-invariant/src/: evaluator.rs  lib.rs  tests.rs
crates/higher-graphen-invariant/src/evaluator/: algorithms.rs
crates/higher-graphen-model-checking/: Cargo.toml
crates/higher-graphen-model-checking/src/: lib.rs
crates/higher-graphen-morphism/: Cargo.toml
crates/higher-graphen-morphism/src/: lib.rs
crates/higher-graphen-obstruction/: Cargo.toml
crates/higher-graphen-obstruction/src/: lib.rs
crates/higher-graphen-projection/: Cargo.toml
crates/higher-graphen-projection/src/: lib.rs  tests.rs
crates/higher-graphen-prover/: Cargo.toml
crates/higher-graphen-prover/src/: lib.rs  solver.rs  tests.rs
crates/higher-graphen-reasoning/: Cargo.toml
crates/higher-graphen-reasoning/src/: lib.rs  uncertainty.rs  uncertainty_tests.rs
crates/higher-graphen-reasoning/src/abstract_interpretation/: mod.rs
crates/higher-graphen-reasoning/src/completion/: obstruction.rs  tests.rs
crates/higher-graphen-reasoning/src/invariant/: mod.rs  tests.rs
crates/higher-graphen-reasoning/src/model_checking/: engine.rs  mod.rs  support.rs
crates/higher-graphen-runtime/: Cargo.toml
crates/higher-graphen-runtime/src/: error.rs  feed_reports.rs  lib.rs  pr_review_reports.rs  reports.rs  semantic_proof_reports.rs  test_gap_reports.rs
crates/higher-graphen-runtime/src/test_gap_reports/: enums.rs  input.rs  lifted.rs  observed.rs  result.rs  scenario.rs
crates/higher-graphen-runtime/src/workflows/: architecture.rs  architecture_direct_db_access_smoke.rs  architecture_input_lift.rs  completion_review.rs  ddd_review.rs  ddd_review_case_space.rs  ddd_review_json.rs  feed_reader.rs  feed_reader_projection.rs  feed_reader_validation.rs  mod.rs  pr_review_target.rs  pr_review_target_lift.rs  pr_review_target_recommend.rs  pr_review_target_scenario.rs  pr_review_target_validate.rs  semantic_proof.rs  test_gap.rs
crates/higher-graphen-runtime/tests/: architecture_direct_db_access_smoke.rs  architecture_input_lift.rs  completion_review.rs  ddd_review.rs  feed_reader.rs  pr_review_target.rs  semantic_proof.rs  test_gap.rs
crates/higher-graphen-space/: Cargo.toml
crates/higher-graphen-space/src/: coverage.rs  lib.rs  store.rs  structural_tests.rs  tests.rs
crates/higher-graphen-space/src/traversal/: algorithms.rs  mod.rs  normalized.rs  types.rs
crates/higher-graphen-structure/: Cargo.toml
crates/higher-graphen-structure/src/: lib.rs
crates/higher-graphen-structure/src/context/: check.rs
crates/higher-graphen-structure/src/morphism/: helpers.rs  mod.rs  tests.rs
crates/higher-graphen-structure/src/space/: graph_analytics.rs  mod.rs  order.rs  order_tests.rs  structural.rs  tests.rs
crates/higher-graphen-structure/src/topology/: analysis.rs  mod.rs  tests.rs
examples/architecture/: Cargo.toml
examples/architecture/reference/: README.md  architecture-reference.input.json  casegraphen-reference.case.graph.json  casegraphen-reference.coverage.policy.json  casegraphen-reference.projection.json
examples/architecture/reference/reports/: architecture-input-lift.report.json  casegraphen-coverage.report.json  casegraphen-project.report.json  casegraphen-validate.report.json  completion-review-accepted.report.json
examples/architecture/tests/: architecture_product_smoke.rs  reference_workflow.rs
examples/feed/: Cargo.toml
examples/feed/reference/: README.md  feed-reader.input.json
examples/feed/reference/reports/: feed-reader.report.json
examples/feed/tests/: reference_workflow.rs
tools/casegraphen/: Cargo.toml
tools/casegraphen/src/: cli.rs  cli_error.rs  cli_legacy_reports.rs  cli_required.rs  cli_usage.txt  core_extension_bridge.rs  eval.rs  lib.rs  main.rs  math_diagnostics.rs  model.rs  native_cli.rs  native_cli_options.rs  native_cli_path.rs  native_cli_reporting.rs  native_eval.rs  native_model.rs  native_report.rs  native_review.rs  native_store.rs  report.rs  store.rs  topology.rs  topology_higher_order.rs  topology_lift.rs  workflow_eval.rs  workflow_model.rs  workflow_report.rs  workflow_workspace.rs
tools/casegraphen/src/cli/: options.rs
tools/casegraphen/src/core_extension_bridge/: native.rs  support.rs  validation.rs  workflow.rs
tools/casegraphen/src/native_cli/: ops.rs  parser.rs  tests.rs
tools/casegraphen/src/native_eval/: graph.rs  sections.rs  tests.rs  types.rs  util.rs  validation.rs
tools/casegraphen/src/native_review/: support.rs  tests.rs
tools/casegraphen/src/native_store/: support.rs  tests.rs  types.rs
tools/casegraphen/src/workflow_eval/: cli_reports.rs  (+7 more)
tools/casegraphen/tests/: command.rs
tools/highergraphen-cli/: Cargo.toml
tools/highergraphen-cli/src/: cli_args.rs  cli_error.rs  command.rs  command_parse.rs  command_run.rs  main.rs  pr_review_git.rs  pr_review_git_support.rs  pr_review_structural.rs  rust_test_semantics.rs  rust_test_semantics_tests.rs  semantic_proof_artifact.rs  semantic_proof_attach_artifact.rs  semantic_proof_backend.rs  semantic_proof_reinput.rs  test_gap_evidence.rs  test_gap_git.rs  test_semantics_gap.rs  test_semantics_interpretation.rs  test_semantics_review.rs  test_semantics_verification.rs
tools/highergraphen-cli/tests/: command.rs
(+294 files in other folders)
