[workspace]
members = [
    "crates/higher-graphen-core",
    "crates/higher-graphen-structure",
    "crates/higher-graphen-projection",
    "crates/higher-graphen-evidence",
    "crates/higher-graphen-reasoning",
    "crates/higher-graphen-interpretation",
    "crates/higher-graphen-runtime",
    "examples/architecture",
    "examples/feed",
    "tools/casegraphen",
    "tools/highergraphen-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
authors = ["CAPH TECH Inc."]
readme = "README.md"
repository = "https://github.com/CAPHTECH/higher-graphen"
license = "Apache-2.0"
keywords = ["ai", "graph", "workflow", "reasoning", "cli"]
categories = ["development-tools", "data-structures", "command-line-utilities"]

[workspace.dependencies]
higher-graphen-core = { version = "0.3.0", path = "crates/higher-graphen-core" }
higher-graphen-structure = { version = "0.3.0", path = "crates/higher-graphen-structure" }
higher-graphen-projection = { version = "0.3.0", path = "crates/higher-graphen-projection" }
higher-graphen-evidence = { version = "0.3.0", path = "crates/higher-graphen-evidence" }
higher-graphen-reasoning = { version = "0.3.0", path = "crates/higher-graphen-reasoning" }
higher-graphen-interpretation = { version = "0.3.0", path = "crates/higher-graphen-interpretation" }
higher-graphen-runtime = { version = "0.3.0", path = "crates/higher-graphen-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
