[package]
name = "higher-graphen-invariant"
description = "Invariants, constraints, invariant checks, and constraint check results for HigherGraphen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
higher-graphen-core.workspace = true
higher-graphen-morphism.workspace = true
higher-graphen-obstruction.workspace = true
higher-graphen-projection.workspace = true
higher-graphen-space.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
