[package]
name = "higher-graphen-model-checking"
description = "Bounded finite-state model checking substrate for HigherGraphen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
higher-graphen-core.workspace = true
higher-graphen-space.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
