[package]
name = "higher-graphen-morphism"
description = "Structure mappings, composition, preservation checks, lost structure, and distortion for HigherGraphen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
higher-graphen-core.workspace = true
serde.workspace = true

[lints]
workspace = true
