[package]
name = "higher-graphen-obstruction"
description = "Obstructions, counterexamples, engines, and explanations for HigherGraphen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[dependencies]
higher-graphen-core.workspace = true
serde.workspace = true

[lints]
workspace = true
