[package]
name = "higher-graphen-prover"
description = "Conservative SAT, SMT, and theorem-proving bridge records for HigherGraphen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
higher-graphen-core.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
