[package]
name = "higher-graphen-runtime"
description = "Runtime workflow orchestration APIs for HigherGraphen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
higher-graphen-core.workspace = true
higher-graphen-interpretation.workspace = true
higher-graphen-projection.workspace = true
higher-graphen-reasoning.workspace = true
higher-graphen-structure.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
