[package]
name = "higher-graphen-structure"
description = "Structural primitives for HigherGraphen spaces, contexts, morphisms, and topology."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
higher-graphen-core.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
