[package]
name = "higher-graphen-architecture-smoke"
description = "Architecture Product smoke scenario for HigherGraphen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[test]]
name = "architecture_product_smoke"
path = "tests/architecture_product_smoke.rs"

[[test]]
name = "reference_workflow"
path = "tests/reference_workflow.rs"

[dev-dependencies]
casegraphen = { path = "../../tools/casegraphen" }
higher-graphen-completion.workspace = true
higher-graphen-core.workspace = true
higher-graphen-invariant.workspace = true
higher-graphen-obstruction.workspace = true
higher-graphen-runtime.workspace = true
higher-graphen-space.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
