[package]
name = "casegraphen"
description = "Structured case graph CLI for HigherGraphen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "casegraphen"
path = "src/main.rs"

[dependencies]
higher-graphen-core.workspace = true
higher-graphen-projection.workspace = true
higher-graphen-structure.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
