[package]
name = "highergraphen-cli"
description = "Command-line workflows for HigherGraphen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "highergraphen"
path = "src/main.rs"

[dependencies]
higher-graphen-core.workspace = true
higher-graphen-runtime.workspace = true
higher-graphen-space.workspace = true
serde_json.workspace = true
syn.workspace = true

[lints]
workspace = true
